# messaging

./: Cargo.toml  readme.md
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
crates/identity-core/: Cargo.toml
crates/identity-core/src/: lib.rs
crates/messaging-proto/: Cargo.toml  build.rs
crates/messaging-proto/proto/: messaging.proto
crates/messaging-proto/src/: lib.rs
crates/net-overlay/: Cargo.toml
crates/net-overlay/src/: lib.rs
crates/storage-ledger/: Cargo.toml
crates/storage-ledger/src/: lib.rs
docs/: mvp_plan.md
