[package]
name = "messaging-desktop"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
identity-core = { path = "../../crates/identity-core" }
messaging-proto = { path = "../../crates/messaging-proto" }
net-overlay = { path = "../../crates/net-overlay" }
storage-ledger = { path = "../../crates/storage-ledger" }
libp2p.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
winit = { version = "0.29", default-features = false, features = ["wayland", "x11"] }
directories.workspace = true
serde_json.workspace = true

[dependencies.eframe]
version = "0.28"
default-features = false
features = ["wgpu", "wayland", "x11", "default_fonts"]
