[package]
name = "net-overlay"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
identity-core = { path = "../identity-core" }
libp2p.workspace = true
messaging-proto = { path = "../messaging-proto" }
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
